Adding file structure to lib in codebase

--- a/Documentation/Aureus-Docs/.obsidian/workspace
+++ b/Documentation/Aureus-Docs/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "4 - Elements (Materials)/User Input/Singular Data Type.md",
+            "file": "Change Log.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "4 - Elements (Materials)/User Input/Singular Data Type.md",
+                "file": "Change Log.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "6f6c93a29e63547f",
   "lastOpenFiles": [
-    "4 - Elements (Materials)/User Input/Singular Data Type.md",
-    "4 - Elements (Materials)/User Input/Multiple Data Type.md",
-    "4 - Elements (Materials)/Misc/Timer.md",
-    "4 - Elements (Materials)/Misc/Slider.md",
-    "4 - Elements (Materials)/Labels/Subheaders.md",
-    "4 - Elements (Materials)/Labels/Mission Headers.md",
-    "4 - Elements (Materials)/Cards/Usage.md",
-    "4 - Elements (Materials)/Cards/Standard Cards.md",
-    "4 - Elements (Materials)/Cards/Pastel Cards.md",
-    "4 - Elements (Materials)/Cards/Glass Cards.md"
+    "Change Log.md",
+    "5 - Components (Bricks)/Input Forms/Basic Input Form.md",
+    "5 - Components (Bricks)/Tabbing Bars/Nav Bars.md",
+    "6 - Views (Building)/Sign Up.md",
+    "6 - Views (Building)/Sign In.md",
+    "6 - Views (Building)/Safety Check.md",
+    "6 - Views (Building)/Onboarding.md",
+    "6 - Views (Building)/Help Center Detail.md",
+    "6 - Views (Building)/Help Center.md",
+    "6 - Views (Building)/Data Consent Screen.md"
   ]
 }
