--- a/Documentation/Aureus-Docs/.obsidian/workspace
+++ b/Documentation/Aureus-Docs/.obsidian/workspace
@@ -7,6 +7,11 @@
         "id": "a4f090b52864a08e",
         "type": "leaf",
         "state": {
+          "type": "markdown",
+          "state": {
+            "file": "3 - Foundation (Basics)/Typography.md",
+            "mode": "preview"
+          }
         }
       }
     ],
@@ -47,7 +52,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 274
+    "width": 100
   },
   "right": {
     "id": "0c665158294df3b7",
@@ -63,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-
+                "file": "3 - Foundation (Basics)/Typography.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -83,16 +88,15 @@
   },
   "active": "a4f090b52864a08e",
   "lastOpenFiles": [
-
-    "6 - Views (Building)/Sign In.md",
-    "6 - Views (Building)/Sign Up.md",
-    "6 - Views (Building)/2FA Verification.md",
-    "6 - Views (Building)/Data Consent Screen.md",
-    "6 - Views (Building)/Help Center.md",
-    "6 - Views (Building)/Help Center Detail.md",
-    "5 - Components (Bricks)/Tabbing Bars/Text Tabbing Bar.md",
-    "5 - Components (Bricks)/Tabbing Bars/Onboarding Tabs.md",
-    "5 - Components (Bricks)/Tabbing Bars/Nav Bars.md",
-    "5 - Components (Bricks)/Tabbing Bars/Icon Tabbing Bar.md"
+    "3 - Foundation (Basics)/Typography.md",
+    "4 - Elements (Materials)/Cards/Badge Cards.md",
+    "4 - Elements (Materials)/Badges/All.md",
+    "3 - Foundation (Basics)/Themes.md",
+    "3 - Foundation (Basics)/Base Colors.md",
+    "2 - Dissection (UX)/Animations.md",
+    "5 - Components (Bricks)/Communication/Search Bar.md",
+    "5 - Components (Bricks)/Communication/Notification.md",
+    "5 - Components (Bricks)/Alert Controllers/Full Width Alert Controller.md",
+    "5 - Components (Bricks)/Alert Controllers/Centered Alert Controller.md"
   ]
 }
