Adding accessibility class to foundation.dart, added google fonts package to the entire project, and created an accessibility class.

--- a/Codebase/Aureus-Package/pubspec.yaml
+++ b/Codebase/Aureus-Package/pubspec.yaml
@@ -10,20 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
-flutter:
-
-  fonts:
-    - family: Exo
-      fonts:
-        - asset: /Users/amandasouthworth/Desktop/Aureus/Assets/Fonts/Exo-Light.ttf
-        - asset: /Users/amandasouthworth/Desktop/Aureus/Assets/Fonts/Exo-Regular.ttf
-        - asset: /Users/amandasouthworth/Desktop/Aureus/Assets/Fonts/Exo-Medium.ttf
