--- a/Codebase/Aureus-Package/pubspec.yaml
+++ b/Codebase/Aureus-Package/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^2.1.0
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
