refactored testing app, completed first round of QA

--- a/Codebase/Aureus-Package/pubspec.yaml
+++ b/Codebase/Aureus-Package/pubspec.yaml
@@ -17,7 +17,7 @@ flutter:
    fonts:
     - family:  Aureus
       fonts:
-       - asset: fonts/Aureus.ttf
+       - asset: lib/src/Aureus.ttf
 
 dev_dependencies:
   flutter_test:
