--- a/Documentation/.obsidian/workspace
+++ b/Documentation/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "2 - Core/Foundation.md",
+            "file": "3 - Widgets/Elements/Misc/Tab Subheader.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "2 - Core/Foundation.md",
+                "file": "3 - Widgets/Elements/Misc/Tab Subheader.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "a4f090b52864a08e",
   "lastOpenFiles": [
-    "2 - Core/Foundation.md",
-    "2 - Core/Safety Plan.md",
-    "2 - Core/Accessibility.md",
-    "1 - Introduction/Sensation.md",
-    "1 - Introduction/Quick Reference.md",
-    "1 - Introduction/Organization.md",
-    "1 - Introduction/Installation.md",
-    "1 - Introduction/Exchange of Trust.md",
-    "1 - Introduction/Contributing.md",
-    "1 - Introduction/Astra's Implementation.md"
+    "3 - Widgets/Elements/Misc/Tab Subheader.md",
+    "3 - Widgets/Elements/Misc/Slider.md",
+    "3 - Widgets/Elements/Info Hiearchy/All.md",
+    "3 - Widgets/Elements/Cards/Usage.md",
+    "3 - Widgets/Elements/Cards/Standard Cards.md",
+    "3 - Widgets/Elements/Cards/Pastel Cards.md",
+    "3 - Widgets/Elements/Cards/Glass Cards.md",
+    "3 - Widgets/Elements/Cards/Badge Cards.md",
+    "3 - Widgets/Elements/Badges/All.md",
+    "3 - Widgets/Components/Tabbing Bars/Text Tabbing Bar.md"
   ]
 }
