--- a/Package/pubspec.yaml
+++ b/Package/pubspec.yaml
@@ -14,10 +14,13 @@ dependencies:
   flutter_secure_storage: ^4.2.1
 
 flutter:
+   assets:
+    - assets/Dark-Mesh.png
+    - assets/Light-Mesh.png
    fonts:
-    - family:  Aureus
+    - family: Aureus
       fonts:
-       - asset: lib/src/Aureus.ttf
+       - asset: lib/fonts/Aureus.ttf
 
 dev_dependencies:
   flutter_test:
