--- a/Test App/pubspec.yaml
+++ b/Test App/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   aureus:
-    path: /Users/amandasouthworth/Desktop/astra/Aureus/Codebase/Aureus-Package
+    path: /Users/amandasouthworth/Desktop/astra/Aureus/Package
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,11 +41,6 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   uses-material-design: true
-
-assets: 
-  fonts:
-    - family: Exo
-      fonts:
-        - asset: /Users/amandasouthworth/Desktop/astra/Aureus/Assets/Fonts/Exo-Light.ttf
-        - asset: /Users/amandasouthworth/Desktop/astra/Aureus/Assets/Fonts/Exo-Regular.ttf
-        - asset: /Users/amandasouthworth/Desktop/astra/Aureus/Assets/Fonts/Exo-Medium.ttf
+  assets: 
+    - assets/Light-Mesh.png
+    - assets/Dark-Mesh.png
