Continuing rounds of QA and working towards usability for beta.

--- a/Package/pubspec.yaml
+++ b/Package/pubspec.yaml
@@ -20,7 +20,7 @@ flutter:
    fonts:
     - family: Aureus
       fonts:
-       - asset: lib/fonts/Aureus.ttf
+       - asset: fonts/Aureus.ttf
 
 dev_dependencies:
   flutter_test:
