--- a/Test App/pubspec.yaml
+++ b/Test App/pubspec.yaml
@@ -43,5 +43,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets: 
-    - assets/Light-Mesh.png
-    - assets/Dark-Mesh.png
+    - assets/
