--- a/Package/pubspec.yaml
+++ b/Package/pubspec.yaml
@@ -2,6 +2,7 @@ name: aureus
 description: A design system for ethical tech use cases involving sensitive populations / functionality
 version: 0.0.0
 homepage:
+documentation: https://example-pet-store.com/newtify/docs
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
