Preparing more documentation for soft beta, and added to test app.

--- a/Documentation/.obsidian/workspace
+++ b/Documentation/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "1 - Introduction/Installation.md",
+            "file": "2 - Core/Foundation/Backing Decorators.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "1 - Introduction/Installation.md",
+                "file": "2 - Core/Foundation/Backing Decorators.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,12 +88,12 @@
   },
   "active": "a4f090b52864a08e",
   "lastOpenFiles": [
+    "2 - Core/Foundation/Backing Decorators.md",
     "1 - Introduction/Installation.md",
     "2 - Core/Accessibility/Accessibility.md",
     "2 - Core/Accessibility/Coloration.md",
     "2 - Core/Foundation/Foundation.md",
     "2 - Core/Foundation/Package Variables.md",
-    "2 - Core/Foundation/Backing Decorators.md",
     "2 - Core/Foundation/Sizing.md",
     "3 - Widgets/Components/Buttons/Full Width Buttons.md",
     "3 - Widgets/Components/Alert Controllers/Centered Alert Controller.md",
