--- a/Package/pubspec.yaml
+++ b/Package/pubspec.yaml
@@ -1,8 +1,8 @@
 name: aureus
-description: A design system for ethical tech use cases involving sensitive populations / functionality
-version: 0.0.0
-homepage:
-documentation: https://example-pet-store.com/newtify/docs
+description: A open-source design system for non-profit software to quickly develop software to serve others in urgent situations.
+version: 0.0.1
+homepage: https://withaureus.org/
+documentation: https://github.com/Astra-Labs/Aureus/tree/main/Documentation 
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -35,3 +35,4 @@ flutter:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.0
