--- a/Package/pubspec.yaml
+++ b/Package/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^2.1.0
   flutter_secure_storage: ^4.2.1
+  permission_handler: ^9.1.0
 
 flutter:
   assets:
