--- a/Package/analysis_options.yaml
+++ b/Package/analysis_options.yaml
@@ -24,6 +24,7 @@ linter:
     use_key_in_widget_constructors: false
     avoid_print: false
     overridden_fields: false
+    must_be_immutable: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
