--- a/Package/pubspec.yaml
+++ b/Package/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   permission_handler: ^9.1.0
   camera: ^0.9.4+16
   sensors_plus: ^1.3.0
+  record: ^3.0.4
+  video_player: ^2.3.0
+  flutter_map: ^0.14.0
+  latlong2: ^0.8.1
 
 flutter:
   assets:
