--- a/Package/pubspec.yaml
+++ b/Package/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_map: ^0.14.0
   latlong2: ^0.8.1
   just_audio: ^0.9.20
+  shared_preferences: ^2.0.13
 
 flutter:
   assets:
