--- a/Package/pubspec.yaml
+++ b/Package/pubspec.yaml
@@ -1,8 +1,8 @@
 name: aureus
-description: A open-source design system for non-profit software to quickly develop software to serve others in urgent situations.
-version: 0.0.1
+description: An open-source design system for non-profits to quickly develop user safety critical applications.
+version: 0.0.2
 homepage: https://withaureus.org/
-documentation: https://github.com/Astra-Labs/Aureus/tree/main/Documentation 
+documentation: https://github.com/Astra-Labs/Aureus/
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: 2.1.0
+  google_fonts: ^2.1.0
   flutter_secure_storage: ^4.2.1
   permission_handler: ^9.1.0
   camera: ^0.9.4+16
