Updating semantics wrappers with Focus nodes

--- a/Package/pubspec.yaml
+++ b/Package/pubspec.yaml
@@ -1,11 +1,11 @@
 name: aureus
 description: An open-source design system for non-profits to quickly develop user safety critical applications.
-version: 0.0.9
+version: 0.0.10
 homepage: https://withaureus.org/
 documentation: https://github.com/Astra-Labs/Aureus/
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
