--- a/Package/pubspec.yaml
+++ b/Package/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   shared_preferences: ^2.0.13
   perichron: ^1.0.0
   url_launcher: ^6.1.12
+  mockito: ^5.4.2
+  flutter_gradient_animation_text: ^1.0.2
 
 flutter:
   assets:
